[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
log = "0.4.17"
wasm-bindgen-futures = "0.4.33"
wasm-bindgen = "0.2.86"
wasm-logger = "0.2.0"
reqwasm = "0.4"
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"
yew-agent = "0.2.0"
serde_json = "1.0.73"
serde = {version = "1.0.163", features=["derive"]}
futures = "0.3.28"
gloo-utils = "0.1.6"
js-sys = "0.3.63"
once_cell = "1.18.0"
lib = { path = "../lib" }

[dependencies.web-sys]
version = "0.3.63"
features = [
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGlProgram',
  'WebGlRenderingContext',
  'WebGlShader',
  'WebGlUniformLocation',
  'CanvasRenderingContext2d',
]

